--- a/app/src/main/res/layout/activity_price_screen.xml
+++ b/app/src/main/res/layout/activity_price_screen.xml
@@ -1,9 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PriceScreen">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <Button
+        android:id="@+id/btnBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btnBack"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="15dp"
+        />
+
+    <TextView
+        android:id="@+id/textViewOne"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:layout_marginTop="15dp"
+        android:textSize="20sp"
+        android:textAlignment="center"
+        android:layout_below="@id/btnBack" />
+
+    <TextView
+        android:id="@+id/textViewNoChange"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/yourTotal"
+        android:layout_marginTop="15dp"
+        android:textSize="20sp"
+        android:textStyle="bold|normal"
+        android:layout_marginStart="120dp"
+        android:layout_below="@id/textViewOne" />
+
+    <TextView
+        android:id="@+id/textViewTwo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/milesHint"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="20sp"
+        android:textSize="20sp"
+        android:layout_alignBaseline="@id/textViewNoChange"
+        android:layout_toEndOf="@id/textViewNoChange"/>
+
+</RelativeLayout>
